--- a/nettside til skolen.html
+++ b/nettside til skolen.html
@@ -59,6 +59,6 @@
 
 
 
- <img src="fortnite.PNG" alt="fortnite" width="250"  height="250">
+ <img src="fortnite.png" alt="fortnite" width="250px" height="250px">
 
 <hit>  900;:click here to get free Vbuck!!! :;"
